--- a/test_resizing_objects_v2.html
+++ b/test_resizing_objects_v2.html
@@ -3,31 +3,15 @@
 <meta charset="utf-8">
 
     <head>
-        <style>
-        .dot {
-            position:absolute;
-            display: inline;
-            top: 50%;
-            height: 50px;
-            width: 50px;
-            background-color: #000000;
-            border-radius: 50%;
-            margin-top: -25px;
-            margin-left: 25px;
-            -webkit-touch-callout: none; /* prevent marking on iOS Safari */
-            -webkit-user-select: none; /* prevent marking on Safari */
-            user-select: none;
-            --originalSizeDva: 2;
-        }
-        </style>   
+        <link href="styles.css" rel="stylesheet" type="text/css">
         <script src="resize_dots.js"></script>
         <meta name="viewport" content="width=device-width">
 
     </head>
     <body>
-        <div id = 'centralPointDiv' class=dot style ='transform: translate(200px);'></div>
+        <div id = 'centralPointDivShift' class=dot style ='transform: translate(200px);'></div>
         <div id = 'centralPointDiv' class=dot></div>
-        <button onclick="myFunction()">Resize Elements</button>
+        <button onclick="resize()">Resize Elements</button>
 
         <script>
             let toy_distance = 100.3; //cm
@@ -37,14 +21,20 @@
             let new_cm_pix = cm2pix(toy_height, toy_width);
 
             let get_dot = document.getElementsByClassName("dot")[0];
-            let original_size_dva = getComputedStyle(get_dot).getPropertyValue("--originalSizeDva");
+            let original_size_dva = getComputedStyle(get_dot).getPropertyValue("--original-size-dva");
             let new_size_pix = dva2pix(original_size_dva, toy_distance, new_cm_pix);  
+            let temp = document.getElementById('centralPointDivShift');
+            console.log(getComputedStyle(temp).getPropertyValue("margin-left"));
         
 
-            function myFunction() {
+            function resize() {
               var x = document.getElementsByClassName("dot");
               for (var i = 0; i < x.length; i++) {
-                x[i].setAttribute("style","width:"+String(new_size_pix)+"px; height:"+String(new_size_pix)+"px");
+                console.log(i)
+                console.log(getComputedStyle(x[i]).getPropertyValue("margin-left"));
+                let temp_x = x[i].setAttribute("style","width:"+String(new_size_pix)+"px; height:"+String(new_size_pix)+
+                    "px; margin-top:"+String((-new_size_pix)/2)+"px; margin-left:"+
+                    String((-new_size_pix)/2)+"px; transform: translate("+String(200+10*i)+"px)");
               }
             }
             </script>
