--- a/test_jpsych_calibrate_rectangle_v2.html
+++ b/test_jpsych_calibrate_rectangle_v2.html
@@ -7,7 +7,7 @@
   <script src="jspsych-6.0.4/jspsych.js" type="text/javascript"></script>
   <script src="jspsych-6.0.4/plugins/jspsych-calibrate-credit-card.js" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/npm/remote-calibrator@latest/lib/RemoteCalibrator.min.js"></script>
-  <link href="/home/lauraflyra/Documents/SHK/ManualInhibitionOnline/credit_card_styles.css" rel="stylesheet" type="text/css">
+  <link href="credit_card_styles.css" rel="stylesheet" type="text/css">
     
 </head>
 
